--- a/.gitignore
+++ b/.gitignore
@@ -1,32 +1,107 @@
-# Ignore pyc files
-__pycache__
-.cache/
+# Byte-compiled / optimized / DLL files
+__pycache__/
+*.py[cod]
+*$py.class
 
-# Python egg metadata, regenerated from source files by setuptools.
-/*.egg-info
-.eggs/
+# C extensions
+*.so
 
-# PyPI distribution artifacts.
-build/
-dist/
-
-# Data
+# Do not track csv files
 *.csv
-*.json
-*.tsv
 
-# Tests
-.pytest_cache/
+# Distribution / packaging
+.Python
+env/
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
 
-# Vs-Code project files
-*.vscode
+# PyInstaller
+#  Usually these files are written by a python script from a template
+#  before PyInstaller builds the exe, so as to inject date/other infos into it.
+*.manifest
+*.spec
 
-*.idea
-*.pyc
-*.png
+# Installer logs
+pip-log.txt
+pip-delete-this-directory.txt
 
-# Ignore jupyter cheskpoints
-*.ipynb_checkpoints
+# Unit test / coverage reports
+htmlcov/
+.tox/
+.coverage
+.coverage.*
+.cache
+nosetests.xml
+coverage.xml
+*.cover
+.hypothesis/
 
-# Ignore OS files
-*.DS_Store
+# Translations
+*.mo
+*.pot
+
+# Django stuff:
+*.log
+local_settings.py
+
+# Flask stuff:
+instance/
+.webassets-cache
+
+# Scrapy stuff:
+.scrapy
+
+# Sphinx documentation
+docs/_build/
+
+# PyBuilder
+target/
+
+# Jupyter Notebook
+.ipynb_checkpoints
+
+# pyenv
+.python-version
+
+# celery beat schedule file
+celerybeat-schedule
+
+# SageMath parsed files
+*.sage.py
+
+# dotenv
+.env
+
+# virtualenv
+.venv
+venv/
+ENV/
+
+# VS Code
+.vscode/
+
+# Spyder project settings
+.spyderproject
+.spyproject
+
+# Rope project settings
+.ropeproject
+
+# mkdocs documentation
+/site
+
+# mypy
+.mypy_cache/
